index and about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
     <meta name="distribution" content="global" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="aboutme.css">
     <script src="./showHide.js" type="text/javascript"></script>
 </head>
 <body>
@@ -29,7 +29,7 @@
 
 <div id="menu" class="toggle">
     <ul>
-        <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="index.html">Main</a></li>
         <li><a href="projects.html">Projects</a></li>
     </ul>
 </div>
@@ -37,19 +37,29 @@
 <!-- ********************************************************************** -->
 
 <div id="contentwrapper">
-    <h1>Hey There!</h1>
+    <h1>About Me</h1>
     <div id="content1">
-        <div class="heythere">
+        <div class="aboutme">
             <h1 style="font-size: 130%">Jonathan Wong</h1>
-            <p>Hey there!  You've stumbled upon my website!</p>
+            <p>Hi!  My name is Jonathan Wong.  I am currently a 3rd year Mechanical Engineering student at UC Berkeley!  Here are some quick takes:</p>
+            <ul>
+                <li>I'm 20 years old</li>
+                <li>I was born in Hong Kong but raised in SoCal (626 area)</li>
+                <li>I play badminton at UC Berkeley</li>
+                <li>My favorite type of food is probably Italian</li>
+                <li>I'm hoping to pursue a minor in Electrical Engineering and Computer Science</li>
+                <li>I can also speak some Cantonese and French</li>
+                <li>Hi Jeffrey Hong!</li>
+            </ul>
+
+            <img src="images/mysig.png" style="width: 146px" />
         </div>
-    </div>
+    </div> <!--content1-->
 
     <!-- ********************************************************************** -->
 
     <div id="content2">
-        <a href="./images/quiksilver.jpeg"><img src="./images/quiksilver.jpeg" /></a>
-
+        <a href="./images/prof.png"><img src="./images/prof.png" /></a>
     </div>
 </div>
 
