index and about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -59,7 +59,7 @@
     <!-- ********************************************************************** -->
 
     <div id="content2">
-        <a href="./images/prof.png"><img src="./images/prof.png" /></a>
+        <a href="./images/prof.PNG"><img src="./images/prof.PNG" /></a>
     </div>
 </div>
 
