violophone picture fix

--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
         </div>
         <div class="projects">
             <div id="content2">
-                <a href="./images/violophone.png"><img src="./images/violophone.png" /></a>
+                <a href="./images/Violophone.PNG"><img src="./images/Violophone.PNG" /></a>
             </div>
             <h1 style="font-size: 130%">The Violophone</h1>
             <p>The Violophone is a phone mount for a violin, designed to make reading sheet music on-the-go much easier.</p>
