pers prof update

--- a/aboutme.html
+++ b/aboutme.html
@@ -46,6 +46,7 @@
                 <li>I'm 20 years old</li>
                 <li>I was born in Hong Kong but raised in SoCal (626 area)</li>
                 <li>I play badminton at UC Berkeley</li>
+                <li>I love music! (I play violin and piano)</li>
                 <li>My favorite type of food is probably Italian</li>
                 <li>I'm hoping to pursue a minor in Electrical Engineering and Computer Science</li>
                 <li>I can also speak some Cantonese and French</li>
