contact info linebreak

--- a/aboutme.html
+++ b/aboutme.html
@@ -54,10 +54,7 @@
             </ul>
 
             <img src="images/mysig.png" style="width: 146px" />
-            <p>Jonathan Wong</p>
-            <p>UC Berkeley Class of 2021</p>
-            <p>jonathancw@gmail.com</p>
-            <p>(626) 628-5560</p>
+            <p>Jonathan Wong<br>UC Berkeley Class of 2021<br>jonathancw@gmail.com<br>(626) 628-5560</p>
         </div>
     </div> <!--content1-->
 
