--- a/aboutme.html
+++ b/aboutme.html
@@ -43,17 +43,17 @@
             <h1 style="font-size: 130%">Jonathan Wong</h1>
             <p>Hi!  My name is Jonathan Wong.  I am currently a 3rd year Mechanical Engineering student at UC Berkeley!  Here are some quick takes:</p>
             <ul>
-                <li>I'm 20 years old</li>
+                <li>I'm 21 years old</li>
                 <li>I was born in Hong Kong but raised in SoCal (626 area)</li>
+                <li>I love tinkering, crafting, and inventing!</li>
                 <li>I play badminton at UC Berkeley</li>
                 <li>I love music! (I play violin and piano)</li>
                 <li>My favorite type of food is probably Italian</li>
-                <li>I'm hoping to pursue a minor in Electrical Engineering and Computer Science</li>
+                <li>I'm pursuing a minor in Electrical Engineering and Computer Science</li>
+                <li>I'm also pursuing a Certificate in Design Innovation</li>
                 <li>I can also speak some Cantonese and French</li>
-                <li>Hi Jeffrey Hong!</li>
             </ul>
 
-            <img src="images/mysig.png" style="width: 146px" />
             <p>Jonathan Wong<br>UC Berkeley Class of 2021<br>jonathancw@gmail.com<br>(626) 628-5560</p>
         </div>
     </div> <!--content1-->
