--- a/aboutme.html
+++ b/aboutme.html
@@ -41,17 +41,20 @@
     <div id="content1">
         <div class="aboutme">
             <h1 style="font-size: 130%">Jonathan Wong</h1>
-            <p>Hi!  My name is Jonathan Wong.  I am currently a 3rd year Mechanical Engineering student at UC Berkeley!  Here are some quick takes:</p>
+            <p>Hi!  My name is Jonathan Wong.  I am currently a 4th year Mechanical Engineering student at UC Berkeley!  Here are some quick takes:</p>
             <ul>
-                <li>I'm 21 years old</li>
+                <li>I'm 22 years old</li>
                 <li>I was born in Hong Kong but raised in SoCal (626 area)</li>
                 <li>I love tinkering, crafting, and inventing!</li>
                 <li>I play badminton at UC Berkeley</li>
-                <li>I love music! (I play violin and piano)</li>
+                <li>I love music and audio technology! (I play piano and violin)</li>
                 <li>My favorite type of food is probably Italian</li>
                 <li>I'm pursuing a minor in Electrical Engineering and Computer Science</li>
                 <li>I'm also pursuing a Certificate in Design Innovation</li>
                 <li>I can also speak some Cantonese and French</li>
+                <li>I have a passion for all things design: UI/UX, product design, game design</li>
+                <li>I'm currently trying to design a card game fun enough to take into the market</li>
+                <li>You can contact me at jonathancw@gmail.com or find me on <a href="https://www.linkedin.com/in/jonathan-c-w/">LinkedIn</a></li>
             </ul>
 
             <p>Jonathan Wong<br>UC Berkeley Class of 2021<br>jonathancw@gmail.com<br>(626) 628-5560</p>
@@ -68,7 +71,7 @@
 <!-- ********************************************************************** -->
 
 <div id="footer">
-    <p>&copy;2019, <a href="mailto:jonathancw@gmail.com">Jonathan Wong</a>
+    <p>&copy;2020, <a href="mailto:jonathancw@gmail.com">Jonathan Wong</a>
 </div>
 </body>
 </html>
