--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,32 @@
     <div id="content1">
         <div class="projects">
             <div id="content2">
+                <a href="./images/Copper.png"><img src="./images/Copper.png" /></a>
+            </div>
+            <h1 style="font-size: 130%">The Copper Collection</h1>
+            <p>The Copper Collection is a set of posters and infographics detailing the antimicrobial properties of copper, prompting its use in everyday products</p>
+            <ul>
+                <li>Copper is an antimicrobial material that naturally kills bacteria and viruses</li>
+                <li>Manufacturing products out of copper will reduce surface infection rates</li>
+                <li>These set of posters envision self cleaning door handles and surfaces, while raising awareness about already existing copper products for the COVID-19 era</li>
+                <li>The full project presentation can be seen <a href="https://www.behance.net/gallery/96474685/The-Copper-Collection">here</a></li>
+            </ul>
+        </div>
+        <div class="projects">
+            <div id="content2">
+                <a href="./images/flame.jpg"><img src="./images/flame.jpg" /></a>
+            </div>
+            <h1 style="font-size: 130%">Wrist Flamethrower</h1>
+            <p>True boredom led me to create a wrist flexion activated flamethrower out of hardware store parts.</p>
+            <ul>
+                <li>Safety First! Though not pictured, a fire extinguisher was nearby at all times!</li>
+                <li>The current version uses a mechanism that sprays butane when the wrist is flexed.</li>
+                <li>An updated version will use an accelerometer, so that it will only activate when punches are thrown</li>
+                <li>The new version will also use a solenoid valve connected to a pipe chamber to house the butane</li>
+            </ul>
+        </div>
+        <div class="projects">
+            <div id="content2">
                 <a href="./images/superconductor.jpg"><img src="./images/superconductor.jpg" /></a>
             </div>
             <h1 style="font-size: 130%">The SuperConductor</h1>
@@ -50,6 +76,7 @@
                 <li>Using an accelerometer, the baton can sense gestures in duple meter</li>
                 <li>After the piece is finished, a tempo edited version is exported to the internet via MQTT</li>
                 <li>This version can be pulled live and played back on your computer speakers</li>
+                <li>Further research suggests, this data can be more accurately time stretched live in Max MSP</li>
                 <li>For more information, click <a href="https://docs.google.com/presentation/d/1As5J0CFPP0e-v2puCjjo26ue6xlL_YnNghPguTeVLVg/edit?usp=sharing">here</a></li>
             </ul>
         </div>
@@ -72,7 +99,7 @@
 <!-- ********************************************************************** -->
 
 <div id="footer">
-    <p>&copy;2019, <a href="mailto:jonathancw@gmail.com">Jonathan Wong</a>
+    <p>&copy;2020, <a href="mailto:jonathancw@gmail.com">Jonathan Wong</a>
 </div>
 </body>
 </html>
