--- a/aboutme.html
+++ b/aboutme.html
@@ -54,6 +54,7 @@
                 <li>I can also speak some Cantonese and French</li>
                 <li>I have a passion for all things design: UI/UX, product design, game design</li>
                 <li>I'm currently trying to design a card game fun enough to take into the market</li>
+                <li>I do design research as part of the <a href="https://codesign.berkeley.edu/">Co-Design Lab</a> at UC Berkeley</li>
                 <li>You can contact me at jonathancw@gmail.com or find me on <a href="https://www.linkedin.com/in/jonathan-c-w/">LinkedIn</a></li>
             </ul>
 
