--- a/projects.html
+++ b/projects.html
@@ -57,12 +57,24 @@
                 <a href="./images/flame.jpg"><img src="./images/flame.jpg" /></a>
             </div>
             <h1 style="font-size: 130%">Wrist Flamethrower</h1>
-            <p>True boredom led me to create a wrist flexion activated flamethrower out of hardware store parts.</p>
+            <p>True boredom led me to create a wrist flexion activated flamethrower out of hardware store parts</p>
             <ul>
                 <li>Safety First! Though not pictured, a fire extinguisher was nearby at all times!</li>
-                <li>The current version uses a mechanism that sprays butane when the wrist is flexed.</li>
+                <li>The current version uses a mechanism that sprays butane when the wrist is flexed</li>
                 <li>An updated version will use an accelerometer, so that it will only activate when punches are thrown</li>
                 <li>The new version will also use a solenoid valve connected to a pipe chamber to house the butane</li>
+            </ul>
+        </div>
+        <div class="projects">
+            <div id="content2">
+                <a href="./images/drone.jpg"><img src="./images/drone.jpg" /></a>
+            </div>
+            <h1 style="font-size: 130%">FPV Racing Drone</h1>
+            <p>I built this FPV Racing Drone!  I'm awful at flying it though...</p>
+            <ul>
+                <li>Build a first person view racing drone with UAVs@Berkeley</li>
+                <li>Flight control is mostly manual (acro mode) to remove restrictions on top speed</li>
+                <li>Flying in acro mode is surprisingly difficult to learn</li>
             </ul>
         </div>
         <div class="projects">
@@ -73,7 +85,7 @@
             <p>The SuperConductor is an electronic conductor's baton that senses user gestures and alters the tempo of music playing in real time.</p>
             <ul>
                 <li>The current prototype plays a preloaded piece from the baton</li>
-                <li>Using an accelerometer, the baton can sense gestures in duple meter</li>
+                <li>Using an accelerometer and ESP32 microcontroller, the baton can sense gestures in duple meter</li>
                 <li>After the piece is finished, a tempo edited version is exported to the internet via MQTT</li>
                 <li>This version can be pulled live and played back on your computer speakers</li>
                 <li>Further research suggests, this data can be more accurately time stretched live in Max MSP</li>
