--- a/aboutme.html
+++ b/aboutme.html
@@ -55,10 +55,10 @@
                 <li>I have a passion for all things design: UI/UX, product design, game design</li>
                 <li>I'm currently trying to design a card game fun enough to take into the market</li>
                 <li>I do design research as part of the <a href="https://codesign.berkeley.edu/">Co-Design Lab</a> at UC Berkeley</li>
-                <li>You can contact me at jonathancw@gmail.com or find me on <a href="https://www.linkedin.com/in/jonathan-c-w/">LinkedIn</a></li>
+                <li>Here is my <a href="https://www.linkedin.com/in/jonathan-c-w/">LinkedIn</a></li></li>
             </ul>
 
-            <p>Jonathan Wong<br>UC Berkeley Class of 2021<br>jonathancw@gmail.com<br>(626) 628-5560</p>
+            <p>Jonathan Wong<br>UC Berkeley Class of 2021<br>jonathancw@gmail.com<br>(626) 628-5560<br></p>
         </div>
     </div> <!--content1-->
 
