--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
             <h1 style="font-size: 130%">FPV Racing Drone</h1>
             <p>I built this FPV Racing Drone!  I'm awful at flying it though...</p>
             <ul>
-                <li>Build a first person view racing drone with UAVs@Berkeley</li>
+                <li>Built a first person view racing drone with UAVs@Berkeley</li>
                 <li>Flight control is mostly manual (acro mode) to remove restrictions on top speed</li>
                 <li>Flying in acro mode is surprisingly difficult to learn</li>
             </ul>
