--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
                 <li>Using an accelerometer and ESP32 microcontroller, the baton can sense gestures in duple meter</li>
                 <li>After the piece is finished, a tempo edited version is exported to the internet via MQTT</li>
                 <li>This version can be pulled live and played back on your computer speakers</li>
-                <li>Further research suggests, this data can be more accurately time stretched live in Max MSP</li>
+                <li>Further research suggests this data can be more accurately time stretched live in Max MSP</li>
                 <li>For more information, click <a href="https://docs.google.com/presentation/d/1As5J0CFPP0e-v2puCjjo26ue6xlL_YnNghPguTeVLVg/edit?usp=sharing">here</a></li>
             </ul>
         </div>
