--- a/aboutme.html
+++ b/aboutme.html
@@ -41,20 +41,20 @@
     <div id="content1">
         <div class="aboutme">
             <h1 style="font-size: 130%">Jonathan Wong</h1>
-            <p>Hi!  My name is Jonathan Wong.  I am currently a 4th year Mechanical Engineering student at UC Berkeley!  Here are some quick takes:</p>
+            <p>Hi!  My name is Jonathan Wong.  I am currently a Mechanical Engineer graduated from UC Berkeley!  Here are some quick takes:</p>
             <ul>
-                <li>I'm 22 years old</li>
+                <li>I'm 23 years old</li>
                 <li>I was born in Hong Kong but raised in SoCal (626 area)</li>
                 <li>I love tinkering, crafting, and inventing!</li>
-                <li>I play badminton at UC Berkeley</li>
+                <li>I play badminton</li>
                 <li>I love music and audio technology! (I play piano and violin)</li>
-                <li>My favorite type of food is probably Italian</li>
-                <li>I'm pursuing a minor in Electrical Engineering and Computer Science</li>
-                <li>I'm also pursuing a Certificate in Design Innovation</li>
+                <li>My favorite type of cuisine is probably Italian</li>
+                <li>I have a minor in Electrical Engineering and Computer Science</li>
+                <li>I have a UC Berkeley Certificate in Design Innovation</li>
                 <li>I can also speak some Cantonese and French</li>
                 <li>I have a passion for all things design: UI/UX, product design, game design</li>
                 <li>I'm currently trying to design a card game fun enough to take into the market</li>
-                <li>I do design research as part of the <a href="https://codesign.berkeley.edu/">Co-Design Lab</a> at UC Berkeley</li>
+                <li>I am looking to pivot into an environmental technology industry!</li>
                 <li>Here is my <a href="https://www.linkedin.com/in/jonathan-c-w/">LinkedIn</a></li></li>
             </ul>
 
@@ -72,7 +72,7 @@
 <!-- ********************************************************************** -->
 
 <div id="footer">
-    <p>&copy;2020, <a href="mailto:jonathancw@gmail.com">Jonathan Wong</a>
+    <p>&copy;2022, <a href="mailto:jonathancw@gmail.com">Jonathan Wong</a>
 </div>
 </body>
 </html>
