--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,16 @@
 <div id="contentwrapper">
     <h1>Projects</h1>
     <div id="content1">
+		<div class="projects">
+				<div id="content2">
+					<a href="./images/Copper.png"><img src="./images/Copper.png" /></a>
+				</div>
+				<h1 style="font-size: 130%">(OBSOLETE)</h1>
+				<p>I'd have more recent projects and pictures, but my current job projects are somewhat confidential!</p>
+				<ul>
+					<li>Please text me (626 628-5560) or email me at jonathancw@gmail.com if you'd like to talk about these!</li>
+				</ul>
+			</div>
         <div class="projects">
             <div id="content2">
                 <a href="./images/Copper.png"><img src="./images/Copper.png" /></a>
@@ -111,7 +121,7 @@
 <!-- ********************************************************************** -->
 
 <div id="footer">
-    <p>&copy;2020, <a href="mailto:jonathancw@gmail.com">Jonathan Wong</a>
+    <p>&copy;2022, <a href="mailto:jonathancw@gmail.com">Jonathan Wong</a>
 </div>
 </body>
 </html>
